# meeting_agent

./: .gitignore  GEMINI.md  GLOBAL_STANDARDS.md  README.md  main.py  pyproject.toml  service.py  test.py
src/common/: audio_recorder.py  gui_interactor.py  logger.py
src/tests/: inspect_ui.py  test_api.py  test_audio.py  test_env.py  test_meeting_e2e.py  test_start_wechat.py  test_wechat_list.py  test_wechat_messages.py  test_wechat_search.py
src/wechat/: __init__.py  controller.py  watcher.py
src/wemeet/: joiner.py
