[project]
name = "cu-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydub>=0.25.1",
    "pygetwindow>=0.0.9",
    "pyrect>=0.2.0",
    "sounddevice>=0.5.5",
    "pywinauto>=0.6.8",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pywinauto-recorder>=0.6.8",
    "pyaudio>=0.2.14",
]
